--- a/template/demo.html
+++ b/template/demo.html
@@ -1,2 +1,24 @@
 
-  <p>{{data}}</p>
+
+  <!-- <p>{{data}}</p> -->
+  <table>
+    <tr>
+    <th>plAYER</th>
+    <th>iMAGE</th>
+  </tr>
+  <tbody>
+    <tr ng-repeat="x in data">
+      <td>  <li>{{x.player_batting_style}}</li>
+        <li>{{x.player_bowling_style}}</li>
+        <li>{{x.player_dob}}</li>
+        <li>{{x.player_name}}</li>
+        <li>{{x.player_nationality}}</li>
+        <li>{{x.player_role}}</li>
+      </td>
+      <td>
+        <img src={{x.player_img_url}}></img>
+
+      </td>
+    </tr>
+  </tbody>
+  </table>
